fix gaps and padding. Add languages on landing page

--- a/JobTracker.Angular/src/app/components/application-changes/application-changes.component.css
+++ b/JobTracker.Angular/src/app/components/application-changes/application-changes.component.css
@@ -266,7 +266,6 @@
 
 @media (max-width: 767px) {
   .table-view-container {
-    padding: var(--space-4) var(--space-4) var(--space-12);
     overflow-y: auto;
     overflow-x: hidden;
   }
